made changes according to proper code flow